openshift/odf-dr/app/k8s_app/dc-quarkus-front.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: postgresql-db
    app.openshift.io/vcs-url: 'https://github.com/davmartini/redhat-techs.git'
    app.quarkus.io/vcs-url: 'https://github.com/davmartini/redhat-techs.git'
    app.quarkus/id: '42'
    foo: bar
  name: quarkus-front
  labels:
    app.kubernetes.io/name: quarkus-front
    app.kubernetes.io/part-of: quarkus-app-with-bdd-on-ocp
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
    department: fruity-dept
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app.kubernetes.io/name: quarkus-front
    app.kubernetes.io/part-of: quarkus-app-with-bdd-on-ocp
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      namespace: demo
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: quarkus-front
        app.kubernetes.io/part-of: quarkus-app-with-bdd-on-ocp
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
        department: fruity-dept
      annotations:
        app.openshift.io/connects-to: postgresql-db
        app.openshift.io/vcs-url: 'https://github.com/davmartini/redhat-techs.git'
        app.quarkus.io/vcs-url: 'https://github.com/davmartini/redhat-techs.git'
        app.quarkus/id: '42'
        foo: bar
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: quarkus-front
          command:
            - java
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            quay.io/david_martini/openshift:crud-with-ocp
          args:
            - '-jar'
            - /deployments/target/atomic-fruit-service-1.0-SNAPSHOT-runner.jar
            - '-cp'
            - >-
              /deployments/target/lib/io.quarkus.quarkus-security-runtime-spi-1.10.5.Final.jar:/deployments/target/lib/io.netty.netty-common-4.1.49.Final.jar:/deployments/target/lib/io.netty.netty-buffer-4.1.49.Final.jar:/deployments/target/lib/io.netty.netty-transport-4.1.49.Final.jar:/deployments/target/lib/io.netty.netty-codec-socks-4.1.49.Final.jar:/deployments/target/lib/io.netty.netty-handler-proxy-4.1.49.Final.jar:/deployments/target/lib/io.netty.netty-codec-http-4.1.49.Final.jar:/deploym [...]
            - '-Dquarkus.http.host=0.0.0.0'
            - '-Djava.util.logging.manager=org.jboss.logmanager.LogManager'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
