openshift/odf-dr/app/k8s_app/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: postgresql-db
  annotations:
    template.openshift.io/expose-uri: 'postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}'
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: postgresql-db
---
kind: Service
apiVersion: v1
metadata:
  name: quarkus-front
  annotations:
    template.openshift.io/expose-uri: 'postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}'
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: quarkus-front
